Updated resume and project descriptions.

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 <img class="project-img" src="assets/images/minimalist.png"/>
             </div>
             <div class="project-details">
-                <p class="details-text">~100 lines Java &emsp;</p>
-                <p class="details-text">~100 lines XML &emsp;</p>
-                <p class="details-text">~100 lines SQLite &emsp;</p>
+                <p class="details-text">~2450 lines Java &emsp;</p>
+                <p class="details-text">~950 lines XML &emsp;</p>
+                <p class="details-text">~270 lines SQLite &emsp;</p>
             </div>
         </div>
         <div class="project" id="screen-off">
@@ -75,9 +75,8 @@
                 <img class="project-img" src="assets/images/screenoff.png"/>
             </div>
             <div class="project-details">
-                <p class="details-text">~100 lines Java &emsp;</p>
-                <p class="details-text">~100 lines XML &emsp;</p>
-                <p class="details-text">~100 lines SQLite &emsp;</p>
+                <p class="details-text">~1000 lines Java &emsp;</p>
+                <p class="details-text">~260 lines XML &emsp;</p>
             </div>
         </div>
         <div class="project" id="personal-website">
@@ -89,9 +88,9 @@
                 <img class="project-img" src="assets/images/personal-website.png"/>
             </div>
             <div class="project-details">
-                <p class="details-text">~100 lines Java &emsp;</p>
-                <p class="details-text">~100 lines XML &emsp;</p>
-                <p class="details-text">~100 lines SQLite &emsp;</p>
+                <p class="details-text">~140 lines HTML &emsp;</p>
+                <p class="details-text">~450 lines CSS &emsp;</p>
+                <p class="details-text">~60 lines JavaScript &emsp;</p>
             </div>
         </div>
     </div>
