Completely remade projects display, added transitions and updated images/resume.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,45 @@
     <div class="top-relative">
         <h2>Projects</h2>
     </div>
-    <div class="scroll-outer div-max-width">
+    <ul class="project-items div-max-width">
+        <li class="project">
+            <figure>
+                <div class="view">
+                    <img src="assets/images/minimalist.png" />
+                </div>
+                <figcaption>
+                    <p>Java, XML, SQLite</p>
+                    <p><a href="https://github.com/ellenluo/minimaList" target="_blank">Github</a></p>
+                </figcaption>
+            </figure>
+            <div class="project-title">MinimaList</div>
+        </li>
+        <li class="project">
+            <figure>
+                <div class="view">
+                    <img src="assets/images/dreampainter.png" />
+                </div>
+                <figcaption>
+                    <p>C#, Unity, Python</p>
+                    <p><a href="https://github.com/lawrencecheng123/DreamPainter-VR" target="_blank">Github</a>&nbsp;&nbsp;<a href="https://devpost.com/software/dreampainter" target="_blank">Devpost</a></p>
+                </figcaption>
+            </figure>
+            <div class="project-title">DreamPainter</div>
+        </li>
+        <li class="project">
+            <figure>
+                <div class="view">
+                    <img src="assets/images/personal-website.png" />
+                </div>
+                <figcaption>
+                    <p>CSS, HTML, JavaScript/JQuery</p>
+                    <p><a href="https://github.com/ellenluo/ellenluo.github.io" target="_blank">Github</a></p>
+                </figcaption>
+            </figure>
+            <div class="project-title">Personal Website</div>
+        </li>
+    </ul>
+    <!--<div class="scroll-outer div-max-width">
         <div class="project" id="minimalist">
             <div class="project-upper">
                 <div class="project-title">
@@ -93,7 +131,7 @@
                 <p class="details-text">~60 lines JavaScript &emsp;</p>
             </div>
         </div>
-    </div>
+    </div>-->
 </section>
 
 <section id="about">
