--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
             Computer science and design are two of my greatest passions, and I love channeling my enthusiasm for
             both through personal projects. I love to learn new things and am always eager to accept constructive
             criticism and new ideas.</p>
-        <p class="left-text">I'm proficient in Java, and can apply it to build Android apps (Java/XML/SQLite), as
+        <p class="block-text">I'm proficient in Java, and can apply it to build Android apps (Java/XML/SQLite), as
             well as GUI apps using Java Swing. I am also familiar with Python, HTML and CSS, and have recently begun to
             learn Javascript and JQuery. I'm comfortable using design and development software such as Adobe
             Photoshop, Adobe Flash, Intellij Idea, Android Studio and WebStorm, and am always on the lookout to pick
             up new skills.</p>
-        <p class="left-text">Aside from programming, I love drawing and painting both digitally and traditionally,
+        <p class="block-text">Aside from programming, I love drawing and painting both digitally and traditionally,
             and play various instruments, including the piano, clarinet and (electric and acoustic) guitar.
             Athletics-wise, I play soccer with friends during the summer, and snowboard down slopes up North during
             the winter.</p>
