Added Google Analytics.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="assets/stylesheets/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="assets/scripts/jquery.js"></script>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-90345489-2', 'auto');
+        ga('send', 'pageview');
+        
+    </script>
 </head>
 
 <body>
@@ -82,56 +92,6 @@
             <div class="project-title">Personal Website</div>
         </li>
     </ul>
-    <!--<div class="scroll-outer div-max-width">
-        <div class="project" id="minimalist">
-            <div class="project-upper">
-                <div class="project-title">
-                    <h4>MinimaList</h4>
-                    <p>Android to-do application offering the ideal intersection of simplicity and functionality.
-                        Features a
-                        side navigation drawer, lists/labels, customizable reminders, a SQLite database, customizable
-                        widget, and elegant material design. Built with Java, XML and SQLite using Android Studio.</p>
-                </div>
-                <img class="project-img" src="assets/images/minimalist.png"/>
-            </div>
-            <div class="project-details">
-                <p class="details-text">~2450 lines Java &emsp;</p>
-                <p class="details-text">~950 lines XML &emsp;</p>
-                <p class="details-text">~270 lines SQLite &emsp;</p>
-            </div>
-        </div>
-        <div class="project" id="screen-off">
-            <div class="project-upper">
-                <div class="project-title">
-                    <h4>Screen Off</h4>
-                    <p>Android and web application built using mongoDB, Node.js, Java, XML, SQLite, JavaScript and
-                        Bootstrap
-                        with a team of four at MasseyHacks II. Allows groups of users to track phone usage and screen on
-                        time and share results with others. Features JSON parsing, background services and network
-                        syncing.</p>
-                </div>
-                <img class="project-img" src="assets/images/screenoff.png"/>
-            </div>
-            <div class="project-details">
-                <p class="details-text">~1000 lines Java &emsp;</p>
-                <p class="details-text">~260 lines XML &emsp;</p>
-            </div>
-        </div>
-        <div class="project" id="personal-website">
-            <div class="project-upper">
-                <div class="project-title">
-                    <h4>Personal Website</h4>
-                    <p>My personal website, built from scratch using HTML, CSS and Javascript/JQuery.</p>
-                </div>
-                <img class="project-img" src="assets/images/personal-website.png"/>
-            </div>
-            <div class="project-details">
-                <p class="details-text">~140 lines HTML &emsp;</p>
-                <p class="details-text">~450 lines CSS &emsp;</p>
-                <p class="details-text">~60 lines JavaScript &emsp;</p>
-            </div>
-        </div>
-    </div>-->
 </section>
 
 <section id="about">
