--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <title>Ellen Luo</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans|Raleway|PT+Sans:700|Raleway:700|Raleway:600|Raleway:500" rel="stylesheet">
+    <link rel="preload" as="image" href="assets/images/mail-hover.png">
+    <link rel="preload" as="image" href="assets/images/linkedin-hover.png">
+    <link rel="preload" as="image" href="assets/images/github-hover.png">
+    <link rel="preload" as="image" href="assets/images/facebook-hover.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="assets/scripts/jquery.js"></script>
     <script>
@@ -15,7 +20,7 @@
 
         ga('create', 'UA-90345489-2', 'auto');
         ga('send', 'pageview');
-        
+
     </script>
 </head>
 
@@ -103,7 +108,7 @@
         <p class="block-text">Hi, I'm Ellen Luo, a software developer born and raised in London, Canada. I am
             currently a 18-year-old student majoring in Electrical Engineering and Computer Science at UC Berkeley.
             Computer science and design are two of my greatest passions, and I love channeling my enthusiasm for
-            both through personal projects. I love to learn new things and am always eager to accept constructive
+            both through personal projects. I love to learn new skills and am always eager to accept constructive
             criticism and new ideas.</p>
         <p class="block-text">I'm proficient in Java, and can apply it to build Android apps (Java/XML/SQLite), as
             well as GUI apps using Java Swing. I am also familiar with Python, HTML and CSS, and have recently begun to
