Edited bio and added more projects.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <title>Ellen Luo</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans|Raleway|PT+Sans:700|Raleway:700|Raleway:600|Raleway:500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans|Raleway|PT+Sans:700|Raleway:700|Raleway:600|Raleway:500"
+          rel="stylesheet">
     <link rel="preload" as="image" href="assets/images/mail-hover.png">
     <link rel="preload" as="image" href="assets/images/linkedin-hover.png">
     <link rel="preload" as="image" href="assets/images/github-hover.png">
@@ -13,10 +14,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="assets/scripts/jquery.js"></script>
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-90345489-2', 'auto');
         ga('send', 'pageview');
@@ -63,7 +71,20 @@
         <li class="project">
             <figure>
                 <div class="view">
-                    <img src="assets/images/minimalist.png" />
+                    <img src="assets/images/petreon.png"/>
+                </div>
+                <figcaption>
+                    <p>jQuery, Python, AWS Lambda, Amazon RDS</p>
+                    <p><a href="https://github.com/ellenluo/treehacks-2017" target="_blank">Github</a>&nbsp;&nbsp;<a
+                            href="https://devpost.com/software/petreon" target="_blank">Devpost</a></p>
+                </figcaption>
+            </figure>
+            <div class="project-title">Petreon</div>
+        </li>
+        <li class="project">
+            <figure>
+                <div class="view">
+                    <img src="assets/images/minimalist.png"/>
                 </div>
                 <figcaption>
                     <p>Java, XML, SQLite</p>
@@ -75,11 +96,12 @@
         <li class="project">
             <figure>
                 <div class="view">
-                    <img src="assets/images/dreampainter.png" />
+                    <img src="assets/images/dreampainter.png"/>
                 </div>
                 <figcaption>
                     <p>C#, Unity, Python</p>
-                    <p><a href="https://github.com/lawrencecheng123/DreamPainter-VR" target="_blank">Github</a>&nbsp;&nbsp;<a href="https://devpost.com/software/dreampainter" target="_blank">Devpost</a></p>
+                    <p><a href="https://github.com/lawrencecheng123/DreamPainter-VR" target="_blank">Github</a>&nbsp;&nbsp;<a
+                            href="https://devpost.com/software/dreampainter" target="_blank">Devpost</a></p>
                 </figcaption>
             </figure>
             <div class="project-title">DreamPainter</div>
@@ -87,10 +109,22 @@
         <li class="project">
             <figure>
                 <div class="view">
-                    <img src="assets/images/personal-website.png" />
+                    <img src="assets/images/simple-weather.png"/>
                 </div>
                 <figcaption>
-                    <p>CSS, HTML, JavaScript/JQuery</p>
+                    <p>Java, XML</p>
+                    <p><a href="https://github.com/ellenluo/simple-weather-app" target="_blank">Github</a></p>
+                </figcaption>
+            </figure>
+            <div class="project-title">Simple Weather</div>
+        </li>
+        <li class="project">
+            <figure>
+                <div class="view">
+                    <img src="assets/images/personal-website.png"/>
+                </div>
+                <figcaption>
+                    <p>CSS, HTML, JavaScript/jQuery</p>
                     <p><a href="https://github.com/ellenluo/ellenluo.github.io" target="_blank">Github</a></p>
                 </figcaption>
             </figure>
@@ -111,10 +145,10 @@
             both through personal projects. I love to learn new skills and am always eager to accept constructive
             criticism and new ideas.</p>
         <p class="block-text">I'm proficient in Java, and can apply it to build Android apps (Java/XML/SQLite), as
-            well as GUI apps using Java Swing. I am also familiar with Python, HTML and CSS, and have recently begun to
-            learn Javascript and JQuery. I'm comfortable using design and development software such as Adobe
-            Photoshop, Adobe Flash, Intellij Idea, Android Studio and WebStorm, and am always on the lookout to pick
-            up new skills.</p>
+            well as GUI apps using Java Swing. I am also familiar with Python scripting, as well as front-end
+            development using HTML, CSS and JavaScript/jQuery. I'm comfortable using design and development software
+            such as Adobe Photoshop, Adobe Flash, Intellij Idea, Android Studio and WebStorm, and am always on the
+            lookout to pick up new skills.</p>
         <p class="block-text">Aside from programming, I love drawing and painting both digitally and traditionally,
             and play various instruments, including the piano, clarinet and (electric and acoustic) guitar.
             Athletics-wise, I play soccer with friends during the summer, and snowboard down slopes up North during
