Fix compatibility issues with IE/Edge and change color scheme

--- a/index.html
+++ b/index.html
@@ -145,11 +145,10 @@
             both through personal projects. I love to learn new skills and am always eager to accept constructive
             criticism and new ideas.</p>
         <p class="block-text">I'm proficient in Java, and can apply it to build Android apps (Java/XML/SQLite), as
-            well as GUI apps using Java Swing. I am also familiar with Python scripting, as well as front-end
-            development using HTML, CSS and JavaScript/jQuery. As well, I have built cross-platform applications using
-            React Native and web applications using the React framework. I'm comfortable using design and development
-            software such as Adobe Photoshop, Adobe Animator, EAGLE CAD, Intellij Idea, Android Studio and WebStorm, and
-            am always on the lookout to pick up new skills.</p>
+            well as GUI apps using Java Swing. I am also familiar with backend development with Python and Django, as
+            well as front-end development with HTML, CSS and JavaScript/jQuery. As well, I have built cross-platform
+            applications using React Native and web applications using the React framework. I'm comfortable using
+            industry tools such as Git, Unix and Vim, and am always on the lookout to pick up new skills.</p>
         <p class="block-text">Aside from programming, I love drawing and painting both digitally and traditionally,
             and play various instruments, including the piano, clarinet and (electric and acoustic) guitar.
             Athletics-wise, I play soccer with friends during the summer, and snowboard down slopes up North during
