Fix more Edge/IE compatibility issues, add favicon, update resume and fix Chrome scrolling

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 
         ga('create', 'UA-90345489-2', 'auto');
         ga('send', 'pageview');
-
     </script>
 </head>
 
@@ -49,13 +48,41 @@
         <h2 id="contact-title">Contact Me</h2>
     </div>
     <div class="centered-absolute">
-        <div>
-            <a href="mailto:ellen.luo@berkeley.edu" class="icon" id="mail" target="_blank"></a>
-            <a href="https://www.linkedin.com/in/ellenluo" class="icon" id="linkedin" target="_blank"></a>
+        <div class = "icon-row">
+            <div class="icon-container">
+                <a href="mailto:ellen.luo@berkeley.edu" target="_blank">
+                    <img class="icon" src="assets/images/mail.png"/>
+                </a>
+                <a href="mailto:ellen.luo@berkeley.edu" class="overlap" target="_blank">
+                    <img class="icon-hover" src="assets/images/mail-hover.png"/>
+                </a>
+            </div>
+            <div class="icon-container">
+                <a href="https://www.linkedin.com/in/ellenluo" target="_blank">
+                    <img class="icon" src="assets/images/linkedin.png"/>
+                </a>
+                <a href="https://www.linkedin.com/in/ellenluo" class="overlap" target="_blank">
+                    <img class="icon-hover" src="assets/images/linkedin-hover.png"/>
+                </a>
+            </div>
         </div>
-        <div>
-            <a href="https://www.facebook.com/ellen.luo.75" class="icon" id="facebook" target="_blank"></a>
-            <a href="https://github.com/ellenluo" class="icon" id="github" target="_blank"></a>
+        <div class="icon-row">
+            <div class="icon-container">
+                <a href="https://www.facebook.com/ellen.luo.75" target="_blank">
+                    <img class="icon" src="assets/images/facebook.png"/>
+                </a>
+                <a href="https://www.facebook.com/ellen.luo.75" class="overlap" target="_blank">
+                    <img class="icon-hover" src="assets/images/facebook-hover.png"/>
+                </a>
+            </div>
+            <div class="icon-container">
+                <a href="https://github.com/ellenluo" target="_blank">
+                    <img class="icon" src="assets/images/github.png"/>
+                </a>
+                <a href="https://github.com/ellenluo" class="overlap" target="_blank">
+                    <img class="icon-hover" src="assets/images/github-hover.png"/>
+                </a>
+            </div>
         </div>
     </div>
     <div class="bottom-absolute">
