Add match predictor project

--- a/index.html
+++ b/index.html
@@ -94,6 +94,19 @@
         <li class="project">
             <figure>
                 <div class="view">
+                    <img src="assets/images/match-predictor.png"/>
+                </div>
+                <figcaption>
+                    <p>TensorFlow, React, Node.js</p>
+                    <p><a href="https://github.com/zgovani/lol-champion-picker" target="_blank">Github</a>&nbsp;&nbsp;<a
+                            href="https://devpost.com/software/league-of-legends-champion-chooser" target="_blank">Devpost</a></p>
+                </figcaption>
+            </figure>
+            <div class="project-title">Match Predictor</div>
+        </li>
+        <li class="project">
+            <figure>
+                <div class="view">
                     <img src="assets/images/petreon.png"/>
                 </div>
                 <figcaption>
