--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <section id="contact">
     <div class="top-relative">
-        <h2 id="contact-title">Contact Me</h2>
+        <h2>Contact Me</h2>
     </div>
     <div class="centered-absolute">
         <div class = "icon-row">
@@ -197,7 +197,7 @@
         <a href=#about><img src="assets/images/up-arrow.png" width="50px" height="25px"></a>
     </div>
     <div class="centered-absolute">
-        <h1 id="title-name">Ellen Luo</h1>
+        <h1>Ellen Luo</h1>
         <h3 class="border-text" id="title-desc">Developer &middot; Designer &middot; Athlete &middot; Musician &middot;
             Innovator</h3>
     </div>
