--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ellen Luo</title>
+    <link rel="icon" href="http://ellenluo.me/favicon.ico?v=2" />
     <link rel="stylesheet" href="assets/stylesheets/main.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans|Raleway|PT+Sans:700|Raleway:700|Raleway:600|Raleway:500"
           rel="stylesheet">
