--- a/index.html
+++ b/index.html
@@ -175,16 +175,11 @@
         <h2>about me</h2>
     </div>
     <div class="div-max-width">
-        <img class="border-img" src="assets/images/portrait.jpg" width="200px">
-        <p class="block-text">Hi, I'm Ellen Luo, a software developer from London, Canada. I am
-            currently a 20-year-old student majoring in Electrical Engineering and Computer Science at UC Berkeley.
-            Computer science and design are two of my greatest passions, and I love channeling my enthusiasm for
-            both through my personal projects. I love to learn new skills and am always eager to accept constructive
-            criticism and new ideas.</p>
-        <p class="block-text">I'm proficient in Java, Python, C, SQL and various front-end languages (JavaScript, CSS, jQuery, etc). As well, I am familiar with popular frameworks such as React/React Native, Django, Flask, and Node and can apply them to build web and mobile applications. I'm comfortable using industry tools such as Git, Unix and Vim, and am always on the lookout to pick up new skills.</p>
-        <p class="block-text">Aside from programming, I love drawing and painting both digitally and traditionally
-            and play various instruments, including the piano, clarinet and guitar.
-            Athletics-wise, I love climbing, hiking, playing soccer and snowboarding.</p>
+        <img class="border-img" src="assets/images/portrait.png">
+        <p class="block-text">Hi! I'm Ellen Luo, a software developer from London, Canada. I graduated from UC Berkeley EECS in May 2019 and 
+        	am now living and working in Silicon Valley. Computer science and design are two of my greatest passions, and I love channeling my enthusiasm for both through my work.</p>
+        <p class="block-text">I'm proficient in Java, Python, C, SQL and various front-end languages (JavaScript, CSS, jQuery, etc). As well, I am familiar with popular frameworks such as React, Django, Flask, and Node and can apply them to build web and mobile applications. I'm comfortable using industry tools such as Git, Unix and Vim, and am always on the lookout to pick up new skills.</p>
+        <p class="block-text">Aside from programming, I enjoy sketching/painting and play various instruments, including the piano, clarinet and guitar. I love climbing around California and Nevada throughout the year and snowboarding at Tahoe during the winter season.</p>
     </div>
 </section>
 
