Update bio and picture

--- a/index.html
+++ b/index.html
@@ -175,11 +175,10 @@
         <h2>about me</h2>
     </div>
     <div class="div-max-width">
-        <img class="border-img" src="assets/images/portrait.png">
-        <p class="block-text">Hi! I'm Ellen Luo, a software developer from London, Canada. I graduated from UC Berkeley EECS in May 2019 and 
-        	am now living and working in Silicon Valley. Computer science and design are two of my greatest passions, and I love channeling my enthusiasm for both through my work.</p>
-        <p class="block-text">I'm proficient in Java, Python, C, SQL and various front-end languages (JavaScript, CSS, jQuery, etc). As well, I am familiar with popular frameworks such as React, Django, Flask, and Node and can apply them to build web and mobile applications. I'm comfortable using industry tools such as Git, Unix and Vim, and am always on the lookout to pick up new skills.</p>
-        <p class="block-text">Aside from programming, I enjoy sketching/painting and play various instruments, including the piano, clarinet and guitar. I love climbing around California and Nevada throughout the year and snowboarding at Tahoe during the winter season.</p>
+        <img class="border-img" src="assets/images/portrait.jpg" width="200px">
+        <p class="block-text">Hi! I'm Ellen Luo, a software developer from London, Canada. I graduated from UC Berkeley EECS in May 2019 and am now living and working in Silicon Valley. Computer science and design are two of my greatest passions, and I love channeling my enthusiasm for both through my work.</p>
+        <p class="block-text">I'm currently working as a Software Engineer at Robinhood, a zero-fee brokerage based in Menlo Park, CA. I work with data infrastructure and full-stack development as part of the Experiments Platform team. Previously, I have interned at Facebook New York, Airbnb and Kloudless working on projects ranging from data pipelining to Android development. I am also contributing part-time to a distributed security systems research project with RISELab at UC Berkeley. I'm comfortable using popular frameworks such as React, Django, Flask, and Node, and am always on the lookout to pick up new skills.</p>
+        <p class="block-text">Aside from programming, I enjoy sketching/painting and play various instruments, including piano, clarinet and guitar. I love the outdoors, and spend my weekends climbing in California and Nevada throughout the year and snowboarding in Tahoe during the winter season.</p>
     </div>
 </section>
 
